File path is in IO exception messages (dotnet/corefx#25195)
* Added path to message Argument_InvalidPathChars.

* Added path to message IO_PathTooLong.

* IO_PathTooLong - separate message when path is empty.

* Added argument reference to message.


Commit migrated from https://github.com/dotnet/corefx/commit/51da21f9934c63216a8d7a2eb27ec5aa97944600

--- a/src/libraries/System.IO.Pipes/src/Resources/Strings.resx
+++ b/src/libraries/System.IO.Pipes/src/Resources/Strings.resx
@@ -273,4 +273,7 @@
   <data name="IO_AllPipeInstancesAreBusy" xml:space="preserve">
     <value>All pipe instances are busy.</value>
   </data>
+  <data name="IO_PathTooLong_Path" xml:space="preserve">
+    <value>The path '{0}' is too long, or a component of the specified path is too long.</value>
+  </data>
 </root>
