--- a/src/libraries/src/System.IO.Pipes/src/Resources/Strings.resx
+++ b/src/libraries/src/System.IO.Pipes/src/Resources/Strings.resx
@@ -273,4 +273,7 @@
   <data name="IO_AllPipeInstancesAreBusy" xml:space="preserve">
     <value>All pipe instances are busy.</value>
   </data>
+  <data name="IO_PathTooLong_Path" xml:space="preserve">
+    <value>The path '{0}' is too long, or a component of the specified path is too long.</value>
+  </data>
 </root>
