HashCode based on xxHash32 (dotnet/coreclr#14863)
* HashCode based on xxHash32

Works by maintaining the xxHash32 state variables (v1 -> v4, length) as well as a queue of values that fall outside of the block size (16 bytes/4 ints). The seed is initialized to random bytes.

Further details, unit tests and history: https://github.com/dotnet/corefx/pull/25013

Commit migrated from https://github.com/dotnet/coreclr/commit/55f6becc6d78b907f7648e1b3e34f5ff95665fa3

--- a/src/clr/src/mscorlib/Resources/Strings.resx
+++ b/src/clr/src/mscorlib/Resources/Strings.resx
@@ -3691,4 +3691,10 @@
   <data name="Memory_OutstandingReferences" xml:space="preserve">
     <value>Release all references before disposing this instance.</value>
   </data>
+  <data name="HashCode_HashCodeNotSupported" xml:space="preserve">
+    <value>HashCode is a mutable struct and should not be compared with other HashCodes. Use ToHashCode to retrieve the computed hash code.</value>
+  </data>
+  <data name="HashCode_EqualityNotSupported" xml:space="preserve">
+    <value>HashCode is a mutable struct and should not be compared with other HashCodes.</value>
+  </data>
 </root>
