Generic hardware intrinsics throw exception for non-numeric types (dotnet/coreclr#15068)
Commit migrated from https://github.com/dotnet/coreclr/commit/b2b7d2cce110293f14563644c0e1780d0cbe343e

--- a/src/clr/src/mscorlib/Resources/Strings.resx
+++ b/src/clr/src/mscorlib/Resources/Strings.resx
@@ -3697,4 +3697,7 @@
   <data name="HashCode_EqualityNotSupported" xml:space="preserve">
     <value>HashCode is a mutable struct and should not be compared with other HashCodes.</value>
   </data>
+  <data name="Arg_TypeNotSupported" xml:space="preserve">
+    <value>Specified type is not supported</value>
+  </data>
 </root>
