Fully enable Memory<byte> in SocketAsyncEventArgs
We initially superficially implemented the Memory<byte> support, by extracting the underlying array from it.  But that a) doesn't work for things other than arrays, and b) doesn't allow us to play nicely with already pinned buffers.  This changes the implementation to actually store the Memory<byte> natively.


Commit migrated from https://github.com/dotnet/corefx/commit/7ef465b97109efaee4254334f6226db402554f38

--- a/src/libraries/System.Net.Sockets/src/Resources/Strings.resx
+++ b/src/libraries/System.Net.Sockets/src/Resources/Strings.resx
@@ -235,4 +235,7 @@
   <data name="PlatformNotSupported_IPProtectionLevel" xml:space="preserve">
     <value>IP protection level cannot be controlled on this platform.</value>
   </data>
+  <data name="InvalidOperation_BufferNotExplicitArray" xml:space="preserve">
+    <value>This operation may only be performed when the buffer was set using the SetBuffer overload that accepts an array.</value>
+  </data>
 </root>
