--- a/src/libraries/src/System.Net.Sockets/src/Resources/Strings.resx
+++ b/src/libraries/src/System.Net.Sockets/src/Resources/Strings.resx
@@ -220,6 +220,9 @@
   <data name="ArgumentOutOfRange_NeedPosNum" xml:space="preserve">
     <value>Positive number required.</value>
   </data>
+  <data name="ArgumentOutOfRange_PathLengthInvalid" xml:space="preserve">
+    <value>The path '{0}' is of an invalid length for use with domain sockets on this platform.  The length must be between 1 and {1} characters, inclusive.</value>
+  </data>
   <data name="net_io_readwritefailure" xml:space="preserve">
     <value>Unable to transfer data on the transport connection: {0}.</value>
   </data>
