Add support for Unix Domain Sockets (dotnet/corefx#25246)
* Move UnixDomainSocketEndPoint to System.Net.Sockets.

* Expose UnixDomainSocketEndPoint publicly in System.Net.Sockets.

Fix dotnet/corefx#10981

* Split UnixDomainSocketTest netcoreapp specific pieces to only be compiled for netcoreapp.

Also - fix the new test names to follow the existing format in the file.


Commit migrated from https://github.com/dotnet/corefx/commit/db1793c43b1c681442ec8035eefa7a41e50abffb

--- a/src/libraries/System.Net.Sockets/src/Resources/Strings.resx
+++ b/src/libraries/System.Net.Sockets/src/Resources/Strings.resx
@@ -220,6 +220,9 @@
   <data name="ArgumentOutOfRange_NeedPosNum" xml:space="preserve">
     <value>Positive number required.</value>
   </data>
+  <data name="ArgumentOutOfRange_PathLengthInvalid" xml:space="preserve">
+    <value>The path '{0}' is of an invalid length for use with domain sockets on this platform.  The length must be between 1 and {1} characters, inclusive.</value>
+  </data>
   <data name="net_io_readwritefailure" xml:space="preserve">
     <value>Unable to transfer data on the transport connection: {0}.</value>
   </data>
