--- a/src/mscorlib/Resources/Strings.resx
+++ b/src/mscorlib/Resources/Strings.resx
@@ -427,6 +427,9 @@
   <data name="Arg_KeyNotFound" xml:space="preserve">
     <value>The given key was not present in the dictionary.</value>
   </data>
+    <data name="Arg_KeyNotFoundWithKey" xml:space="preserve">
+    <value>The given key '{0}' was not present in the dictionary.</value>
+  </data>
   <data name="Arg_LongerThanDestArray" xml:space="preserve">
     <value>Destination array was not long enough. Check the destination index, length, and the array's lower bounds.</value>
   </data>
